samples/_failures_safe/1761094146_b4b2b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b24f686.c: In function ‘main’:
./samples/SAFE/__tmp_2b24f686.c:139:12: error: missing terminating " character
  139 |     printf("Log Analyzer - Enter log
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2b24f686.c:139:5: error: expected expression at end of input
  139 |     printf("Log Analyzer - Enter log
      |     ^~~~~~
./samples/SAFE/__tmp_2b24f686.c:139:5: error: expected declaration or statement at end of input
